--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -10,7 +10,7 @@ on:
 
 defaults:
   run:
-    working-directory: container
+    working-directory: packages/container
 
 jobs:
   build:
@@ -21,8 +21,8 @@ jobs:
       - run: npm install
       - run: npm run build
 
-      - uses: chrislennon/action-aws-cli@1.1
-      - run: aws s3 sync dist s3://${{ secrets.AWS_S#_BUCKET_NAME }}/container/latest
+      - uses: chrislennon/action-aws-cli@v1.1
+      - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.aws.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY_ID: ${{ secrets.aws.AWS_SECRET_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
